# Infoscreen

./: .gitignore  LICENSE  README.md
Player/: Makefile  compile.sh  run.sh
Player/examples/: example.c  example.h  findDiffAABB.c  findDiffAABB.h
infoscreen/: Cargo.toml  build.rs  run.sh
infoscreen/site/: data.js  icons.xml  index.html  style.css
infoscreen/src/: api.rs  api_digitransit.rs  api_openweathermap.rs  api_wodconnect.rs  browser_control.rs  config.rs  data_manager.rs  eink_screen.rs  main.rs  web_server.rs  web_server_host.rs
