[package]
name = "infoscreen"
version = "0.1.0"
edition = "2021"

[profile.dev]
rpath = true

[dependencies]
async-trait = "0.1.74"
bytes = "1.5.0"
chrono = "0.4.31"
chrono-tz = "0.8.4"
confy = "0.5.1"
futures-util = "0.3.29"
headless_chrome = "1.0.8"
http = "1.0.0"
http-body-util = "0.1.0"
hyper = { version = "1.0.1", features = ["server", "http1", "full"] }
hyper-util = { version = "0.1.1", features = ["full"] }
image = "0.24.7"
libc = "0.2.150"
once_cell = "1.18.0"
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = "1.0.192"
serde_derive = "1.0.192"
serde_json = "1.0.108"
tl = "0.7.7"
tokio = { version = "1.34.0", features = ["macros", "io-util", "full"] }
tokio-util = "0.7.10"
